# jobs-applier

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: SETUP.md  SHOWCASE.md
scripts/: install-task.ps1  publish-github.ps1
src/jobs_applier/: __init__.py  __main__.py  cli.py  logging_config.py
src/jobs_applier/apply/: __init__.py  ashby.py  base.py  browser.py  form_filler.py  greenhouse.py  lever.py  linkedin.py  router.py
src/jobs_applier/config/: __init__.py  profile.py  settings.py
src/jobs_applier/filters/: __init__.py  engine.py  relevance.py
src/jobs_applier/models/: __init__.py  job.py
src/jobs_applier/notifications/: __init__.py  email.py
src/jobs_applier/pipeline/: __init__.py  runner.py
src/jobs_applier/profile/: __init__.py  qa_cache.py
src/jobs_applier/scheduler/: __init__.py  daemon.py
src/jobs_applier/scrapers/: __init__.py  apify_client.py  base.py  jobspy_local.py  multi.py  normalizer.py  remoteok.py  remotive.py
src/jobs_applier/storage/: __init__.py  db.py  models.py  repositories.py
src/jobs_applier/templates/: __init__.py  config.example.yaml  env.example  profile.example.yaml
tests/: test_apify_client.py  test_filters.py  test_linkedin_easy_apply.py  test_multi_scrape.py  test_normalizer.py  test_qa_cache.py  test_relevance.py  test_router.py  test_status_repo.py
