[project]
name = "jobs-applier"
version = "0.1.0"
description = "Local job scraper and auto-applier powered by Apify and Playwright"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Ibrahim Butt", email = "m.ibrahim8325@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "apify-client>=1.8.0",
    "apscheduler>=3.10.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
]

[project.scripts]
jobs-applier = "jobs_applier.cli:app"

[project.urls]
Homepage = "https://github.com/Ibrahim8325/jobs-applier"
Repository = "https://github.com/Ibrahim8325/jobs-applier"
Issues = "https://github.com/Ibrahim8325/jobs-applier/issues"
Documentation = "https://github.com/Ibrahim8325/jobs-applier/blob/main/docs/SETUP.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobs_applier"]

[tool.hatch.build.targets.wheel.force-include]
"src/jobs_applier/templates" = "jobs_applier/templates"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/scripts",
    "/config.example.yaml",
    "/profile.example.yaml",
    "/.env.example",
    "/LICENSE",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["apify_client.*", "playwright.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
